<resources>
    <string name="app_name">Stuflow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Регистрация</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="ready">Готово</string>
    <string name="sign_up">Авторизация</string>
    <string name="sign_in_failed">Ошибка авторизации. Проверьте введенные данные и подключение к интернету.</string>
    <string name="sign_up_failed">Ошибка регистрации. Проверьте подключение к интернету. Возможно данный адрес электронный почты уже зареистрирован.</string>
    <string name="name">Имя</string>
    <string name="no_connection">Нет подключения к интернету.</string>
    <string name="settings">Настройки</string>
    <string name="title">Заголовок</string>
    <string name="create">Создать</string>
    <string name="content">Текст</string>
    <string name="theme">Тема</string>
    <string name="post_success">Вопрос опубликован.</string>
    <string name="update_failed">Невозможно обновить список вопросов.</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="comment">Комментарий</string>
    <string name="user">Пользователь</string>
    <string name="contact">Контактная информация</string>
    <string name="exit">Выйти</string>
    <string name="delete_ac">Удалить аккаунт</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save_changes">Сохранить изменения?</string>
</resources>